add option to pick one item or show whole list

--- a/options.html
+++ b/options.html
@@ -17,6 +17,18 @@
         <textarea id="list-input" cols="50" rows="10">Go Outside
 Go on a walk
 Write a Journal</textarea>
+        <p>Choose either to have the whole list presented each time or a randomly picked item</p>
+        <div>
+            <input type="radio" id="list"
+                   name="item-display" value="list" />
+            <label for="list">Whole List</label>
+        </div>
+
+        <div>
+            <input type="radio" id="random"
+                   name="item-display" value="random" />
+            <label for="random">Randomly Chosen</label>
+        </div>
       </div>
     <script src="options.js"></script>
     </body>
