--- a/newtab.html
+++ b/newtab.html
@@ -48,10 +48,7 @@
                 <h1>Why not...</h1>
             </div>
             <div class="box-scroll">
-                <ul id="outside-list">
-                    <li>Go outside</li>
-                    <li>Go for a walk</li>
-                </ul>
+                <div id="outside-list"></div>
             </div>
         </div>
       </div>
